# pi-pilgrim

./: LICENSE  README.md  pyproject.toml
pipilgrim/: __init__.py  file_resource.py  instance_provider.py  pilgrim_assembly.py
tests/: test_example_assembly.py  test_quest_assembly.py
tests/utils/: another_assembly.py  castle.py  example_assembly.py  knight.py  quest.py  quest_assembly.py  test_instance.py  text_file.txt
